fix: alignment of addresses boxes

--- a/app/ui/components/registration/registration.module.scss
+++ b/app/ui/components/registration/registration.module.scss
@@ -13,6 +13,7 @@
 
     @include media-mobile {
       flex-direction: column;
+      gap: 20px;
     }
   }
 
